# Pat-Stat

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 093268312883_add_primary_doctor_id_to_admissions.py  4f8b7f2a1c90_add_dashboard_emergency_and_handover_tables.py  69638fe44fc3_drop_interoperability_tables_for_single_.py  9d2c7e1a4b55_fix_admissions_ward_type.py  a1b2c3d4e5f6_add_trgm_indexes_for_ilike_search.py  a1f2b3c4d5e6_add_platform_settings_table.py  (+7 more)
docs/: api.md  architecture.md  development.md  operations.md  security.md
scripts/: backup_db.ps1  restore_db.ps1  seed_super_admin.py  test.ps1
src/: main.py  models.py
tests/: conftest.py  helpers.py  test_auth.py  test_auth_edge_cases.py  test_auth_extended.py  test_backoffice_documents.py  test_backoffice_edge_cases.py  test_clinical_updates_endpoints.py  test_contact_sales.py  test_dashboard.py  test_emergency_flags.py  test_family_dashboard.py  test_family_management.py  test_gap_features.py  test_global_exception_handler.py  test_health.py  test_hospitals.py  test_notification_delivery_log.py  test_notification_dispatch.py  test_notification_policy.py  test_notifications.py  test_notifications_edge_cases.py  test_patients.py  test_patients_crud.py  test_patients_edge_cases.py  test_rbac.py  test_shift_handover.py  test_staff.py  test_staff_listing.py  test_staff_notes.py  test_super_admin_backoffice.py  test_ws.py  test_ws_token_watchdog.py
(+92 files in other folders)
