[project]
name = "pat-stat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"  
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.135.1",
    "python-jose>=3.5.0",
    "redis>=7.3.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]