[project]
name = "pat-stat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"  
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "celery>=5.4.0",
    "psycopg2-binary>=2.9.9",
    "fastapi[standard]>=0.135.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "redis>=7.3.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.48",
    "firebase-admin>=7.4.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
